# vivek

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  REFACTORING_COMPLETION_SUMMARY.md  SETUP.md  SKILLS_PLAN_DELIVERED.md  TODO.md  pyproject.toml  quick_start.sh  requirements.txt  setup.py  vivek.md
.github/: copilot-instructions.md
.vivek/: config.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  MIGRATION_GUIDE.md  MIGRATION_ROADMAP_V3_TO_V4.md  PROMPT_IMPROVEMENTS.md  QUICK_REFERENCE_V4_STRUCTURE.md  README.md  README_WORKSTREAMS.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.2.0-beta.md  SKILL_BASED_AUGMENTATION_SYSTEM.md  TOOLS_AND_FILE_INTEGRATION.md  V4_IMPLEMENTATION_INDEX.md  VECTOR_STORAGE_STRATEGY.md  VIVEK_COMPLETE_ROADMAP.md  VIVEK_WORKSTREAM_SUMMARY.md  WORKSTREAMS_DELIVERY_SUMMARY.md  WORKSTREAMS_INDEX.md  WORKSTREAM_1_FOUNDATION.md  WORKSTREAM_2_CORE_SERVICES.md  WORKSTREAM_3_ORCHESTRATION.md  WORKSTREAM_4_CLI_POLISH.md  WORKSTREAM_5_SKILLS_SYSTEM.md  WORKSTREAM_6_AGENTIC_CONTEXT_INTEGRATION.md  WORKSTREAM_7_LANGGRAPH_ORCHESTRATION.md  WORKSTREAM_8_REAL_LLM_INTEGRATION.md  WORKSTREAM_9_CODE_QUALITY_VALIDATION.md  WORK_ITEM_BREAKDOWN.md  comparision.md  refactoring.md  vivek.md
docs/archive/: COMPLETE_DOCUMENTATION_INDEX.md  CONSOLIDATION_GAP_ANALYSIS.md  CRITICAL_GAPS_AND_RISKS.md  FOLDER_ORGANIZATION_V4.md
docs/backup/old_architecture/: enhanced_graph_nodes.py  langgraph_orchestrator.py  structured_executor.py
docs/guides/: DOCUMENTATION_SUMMARY.md
docs/old_architecture_tests_backup/: test_agentic_context_retrieval_strategies.py  test_agentic_context_semantic_retrieval.py  test_agentic_context_tag_normalization.py  test_executor_messages.py  test_langgraph_orchestrator.py  test_message_protocol.py  test_plugin_language_aware_executor_factory.py
docs/refactoring/: AGENTIC_CONTEXT_REFACTORING.md  CODE_COMPARISON.md  REFACTORING_CHECKLIST.md  REFACTORING_INDEX.md  REFACTORING_SUMMARY.md
examples/001-integration-tests/: ORCHESTRATOR_TESTING.md  README.md  run_integration_tests.sh  run_tests.sh
examples/001-integration-tests/go-project/: calculator.go  go.mod
examples/001-integration-tests/go-project/.vivek/: config.yml
examples/001-integration-tests/home-rental-service/: README.md  vivek.md
examples/001-integration-tests/home-rental-service/.vivek/: config.yml
examples/001-integration-tests/python-project/: calculator.py  vivek.md
examples/001-integration-tests/python-project/.vivek/: config.yml
examples/001-integration-tests/typescript-project/: calculator.ts  package.json
examples/001-integration-tests/typescript-project/.vivek/: config.yml
src/: demo_new_architecture.py  session.py
src/vivek/: __init__.py  cli.py
src/vivek/agentic_context/: EXAMPLE.py  REFACTORING.md  __init__.py  config.py  workflow.py
src/vivek/agentic_context/core/: __init__.py  context_manager.py  context_storage.py
src/vivek/agentic_context/retrieval/: retrieval_strategies.py  semantic_retrieval.py  tag_normalization.py
src/vivek/application/orchestrators/: __init__.py  simple_orchestrator.py
src/vivek/application/services/: __init__.py  vivek_application_service.py
src/vivek/domain/exceptions/: exception.py
src/vivek/domain/interfaces/: executor.py  file_service.py  planner.py  qualifier.py
src/vivek/domain/models/: execution_result.py  quality_score.py  work_item.py
src/vivek/domain/planning/models/: __init__.py  plan.py  (+1 more)
src/vivek/infrastructure/: di_container.py
src/vivek/infrastructure/config/: settings.py
src/vivek/infrastructure/file_operations/: command_executor.py  file_service.py
src/vivek/infrastructure/llm/: __init__.py  llm_provider.py  mock_provider.py  ollama_provider.py
src/vivek/infrastructure/persistence/: __init__.py  file_repository.py  memory_repository.py  state_repository.py
src/vivek/llm/: models.py  provider.py
src/vivek/llm/plugins/: __init__.py
src/vivek/prompts/: __init__.py  granular_sdet_prompts.py  multi_phase_planner_prompts.py  prompt_architecture.py  tdd_workflow_orchestrator.py
src/vivek/utils/: __init__.py  path_setup.py  test_logging.py
tests/: README.md  conftest.py  mocks.py  pytest.ini  requirements-test.txt  test_agentic_context_config.py  test_agentic_context_integration.py  test_agentic_context_manager.py  test_agentic_context_retrieval_strategies.py  test_agentic_context_semantic_retrieval.py  test_agentic_context_storage.py  test_agentic_context_tag_normalization.py  test_agentic_context_workflow.py  test_cli.py  test_constants_and_magic_strings.py  test_context_condensation.py  test_executor_messages.py  test_langgraph_orchestrator.py  test_message_protocol.py  test_mode_specific_prompts.py  test_models.py  test_new_architecture.py  test_orchestrator.py  test_orchestrator_routing.py  test_planner_messages.py  test_plugin_language_aware_executor_factory.py  test_prompt_optimization.py  test_retrieval_strategies.py  test_routing_functions.py  test_structured_workflow.py  test_workflow_integration.py
tests/unit/: __init__.py  test_command_executor.py  test_file_service.py  test_settings.py  test_work_item.py
vivek/: __init__.py  cli.py
vivek/agentic_context/: __init__.py  config.py  workflow.py
vivek/agentic_context/core/: context_manager.py
vivek/agentic_context/retrieval/: retrieval_strategies.py  semantic_retrieval.py
vivek/core/: __init__.py  context_condensation.py  enhanced_graph_nodes.py  graph_nodes.py  graph_state.py  langgraph_orchestrator.py  message_protocol.py  orchestrator.py  performance_validator.py  prompt_templates.py  structured_workflow.py  workflow_integration.py
vivek/llm/: __init__.py  architect_executor.py  coder_executor.py  constants.py  executor.py  models.py  peer_executor.py  planner.py  provider.py  sdet_executor.py  structured_executor.py  structured_planner.py
vivek/llm/plugins/: __init__.py
vivek/llm/plugins/base/: __init__.py  language_plugin.py  registry.py
vivek/llm/plugins/languages/: go.py  python.py  typescript.py
vivek/utils/: language_detector.py  prompt_utils.py  test_logging.py  token_counter.py
(+13 files in other folders)
