[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivek"
version = "0.1.0"
description = "Privacy-first collaborative AI brain design for intelligent coding assistance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sanket Naik", email = "sanketn@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.3.0",
    "requests>=2.28.0",
    "gitpython>=3.1.0",
    "pathspec>=0.11.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
vivek = "vivek.cli:cli"

[project.urls]
Homepage = "https://github.com/sanketn26/vivek"
Repository = "https://github.com/sanketn26/vivek"
Documentation = "https://github.com/sanketn26/vivek#readme"
"Bug Tracker" = "https://github.com/sanketn26/vivek/issues"