[tool.poetry]
name = "vivek"
version = "3.0.0"
description = "Clean Architecture AI coding assistant following SOLID principles"
authors = ["Sanket Naik <sanketn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vivek", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = ">=8.0.0"
rich = ">=13.0.0"
pyyaml = ">=6.0"
python-dotenv = ">=1.0.0"
ollama = ">=0.3.0"
requests = ">=2.28.0"
gitpython = ">=3.1.0"
pathspec = ">=0.11.0"
watchdog = ">=3.0.0"
psutil = ">=5.9.0"
colorama = ">=0.4.6"
langgraph = ">=0.2.0"
langchain-core = ">=0.3.0"
langgraph-checkpoint-sqlite = ">=1.0.0"
typing-extensions = ">=4.5.0"
tiktoken = ">=0.5.0"
numpy = ">=1.21.0"
sentence-transformers = ">=2.2.0"
torch = ">=2.0.0"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-click = ">=1.1.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[tool.poetry.scripts]
vivek = "vivek.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --ignore=docs/old_architecture_tests_backup"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "cli: CLI functionality tests",
    "llm: LLM model tests",
    "orchestrator: Orchestrator tests",
    "asyncio: Async tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
